# envirocar-py

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  install_venv_description.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
envirocar/client/: client_config.py  download_client.py  request_param.py  utils.py
envirocar/client/api/: track_api.py
etc/: environment.yml
examples/: api_request_deckgl.ipynb  enviroCar_variable_description.ipynb  map_matching_example.ipynb
src/envirocar/: exceptions.py
src/envirocar/client/: download_client.py  utils.py
src/envirocar/client/api/: track_api.py
tests/: test_envirocar_client.py  test_track_decoding.py
tests/envirocar/: test_envirocar_client.py  test_track_decoding.py
tests/files/: track_1.json  track_2.json  tracks.json
