[tool.poetry]
name = "envirocar-py"
version = "0.1.0"
description = ""
authors = ["Julian Psotta <julianpsotta@gmail.com>"]
readme = "README.md"
packages = [{ include = "envirocar", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
requests = "^2.31.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.3"
pydeck = "^0.8.0"
ipython = "^8.22.2"
folium = "^0.16.0"

[tool.poetry.extras]
jupyterlab = ["jupyterlab"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
coverage = { version = "^7.3.4", extras = ["toml"] }
tox = "^4.14.1"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 20 # Warnings

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"
extend-select = ["I"]

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
