[tool.poetry]
name = "envirocar-py"
version = "0.1.0"
description = ""
authors = ["Julian Psotta <julianpsotta@gmail.com>"]
readme = "README.md"
packages = [{ include = "envirocar", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
requests = "^2.31.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.3"
pydeck = "^0.8.0"
ipython = "^8.22.2"
folium = "^0.16.0"
pre-commit = "^3.6.2"
jupyter = "^1.0.0"
tqdm = "^4.66.2"
polars = { version = "^0.20.15", extras = ["pyarrow", "pandas"] }
geopolars = "^0.1.0a4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
coverage = { version = "^7.3.4", extras = ["toml"] }
tox = "^4.14.1"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 20 # Warnings

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
